--- a/src/NP.NLogAdapter.nuspec
+++ b/src/NP.NLogAdapter.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>NP.NLogAdapter</id>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
     <title>NP.NLogAdapter</title>
     <authors>Nick Polyak, Ph. D.</authors>
     <license type="expression">MIT</license>
@@ -14,6 +14,7 @@
     <copyright>Nick Polyak 2021</copyright>
     <tags>Adapts NLog</tags>
     <dependencies>
+        <dependency id="NLog" version="4.7.11"/>
         <dependency id="NP.Utilities" version="1.0.11"/>
     </dependencies>
   </metadata>
