--- a/src/NP.NLogAdapter.csproj
+++ b/src/NP.NLogAdapter.csproj
@@ -1,25 +1,39 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <PackageId>NP.NLogAdapter</PackageId>
-    <Authors>Nick Polyak</Authors>
-    <Company>AWebPros</Company>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-  </PropertyGroup>
-  <ItemGroup>
-    <None Remove="nlog.config" />
-    <None Remove="NP.NLogAdapter.nuspec" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="nlog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="NLog" Version="4.7.11" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="$(SolutionDir)..\..\SubModules\NP.Utilities\src\NP.Utilities.csproj" />
-    <ProjectReference Include="$(SolutionDir)..\..\SubModules\NP.DependencyInjection\src\NP.DependencyInjection.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<PackageId>NP.NLogAdapter</PackageId>
+		<Authors>Nick Polyak</Authors>
+		<Company>AWebPros</Company>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<Title>NP.NLogAdapter</Title>
+		<Authors>Nick Polyak, Ph. D.</Authors>
+		<Version>1.0.8</Version>
+		<Copyright>Nick Polyak 2023</Copyright>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Description>Adapts NLOG</Description>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageTags>NLog</PackageTags>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Remove="nlog.config" />
+		<None Remove="NP.NLogAdapter.nuspec" />
+	</ItemGroup>
+	<ItemGroup>
+		<Content Include="nlog.config">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="NLog" Version="4.7.11" />
+	</ItemGroup>
+	<ItemGroup Condition="'$(Configuration)' == 'Debug'">
+		<ProjectReference Include="$(SolutionDir)..\..\SubModules\NP.Utilities\src\NP.Utilities.csproj" />
+		<ProjectReference Include="$(SolutionDir)..\..\SubModules\NP.DependencyInjection\src\NP.DependencyInjection.csproj" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(Configuration)' == 'Release'">
+		<PackageReference Include="NP.Utilities" Version="1.0.19" />
+		<PackageReference Include="NP.DependencyInjection" Version="1.0.9" />
+	</ItemGroup>
+
 </Project>
